--- a/promptbook/resources/css/style.css
+++ b/promptbook/resources/css/style.css
@@ -16,3 +16,7 @@ nav {
 nav.disappear {
     transform: translateY(-100%);
 }
+
+.clip-diagonal {
+    clip-path: polygon(0 0, 100% 20px, 100% 100%, 0 100%);
+}
