added many-to-many relationship for company prompt

--- a/promptbook/resources/css/style.css
+++ b/promptbook/resources/css/style.css
@@ -46,3 +46,12 @@ nav.disappear {
 .prompt-card-bg {
     background-color: rgb(73, 52, 106);
 }
+
+.prompt-details-title {
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 860;
+    font-style: normal;
+    font-variation-settings:
+    "wdth" 89.8;
+}
